--- a/to-do-list/src/components/Task/Task.module.css
+++ b/to-do-list/src/components/Task/Task.module.css
@@ -29,7 +29,7 @@
 .count {
     color: var(--gray100);
     background: var(--gray400);
-    width: 1.563rem;
+    padding: 0.5rem;
     height:1.188rem;
     display: flex;
     justify-content: center;
@@ -42,5 +42,6 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    margin-bottom: 4rem;
 }
 
