--- a/to-do-list/src/components/TaskComponent/TaskComponent.module.css
+++ b/to-do-list/src/components/TaskComponent/TaskComponent.module.css
@@ -21,4 +21,34 @@
     height: 1.5rem;
     border-radius: 999px;
     border: 2px solid var(--blue);
+    cursor: pointer;
+}
+
+.caixaDeMarcar:hover{
+    
+    background-color: rgba(30, 111, 159, 0.2);
+    
+}
+
+.caixaDeMarcarOn {
+    background: var(--purpleDark);
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 999px;
+    border: 2px solid var(--purpleDark);
+}
+
+.caixaDeMarcarOn {
+    background: var(--purple);
+    border: 2px solid var(--purple);
+    
+}
+
+.trash:hover{
+    background: var(--gray400);
+    color: var(--danger);
+    border-radius: 4px;
+    width: 1.5rem;
+    height: 1.5rem;
+    cursor: pointer;
 }
