refatorei tudo por que tava muito desorganizado os arquivos

--- a/to-do-list/src/components/TasksComponents.module.css
+++ b/to-do-list/src/components/TasksComponents.module.css
@@ -1,3 +1,46 @@
+.newTask {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-top: calc(0px - 1.5rem - 6px);
+}
+
+.InputTask {
+    background: var(--gray500);
+    width: 39.875rem;
+    border: 0;
+    height: 3.375rem;
+    border-radius: 8px;
+    padding: 1rem;
+    font-size: 1rem;
+    color: var(--gray100);
+}
+
+.buttonTask {
+    width: 5.625rem;
+    height: 3.375rem;
+    border-radius: 8px;
+    background: var(--blueDark);
+    color: var(--gray100);
+    font-size: 0.875rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    gap: 0.125rem;
+    border: 0;
+}
+
+.buttonTask:hover{
+    background: var(--blue);
+    cursor: pointer;
+}
+
+.InputTask:focus {
+    border: 1px solid var(--purpleDark);
+    
+}
+
 .bodyTask {
     width: 46rem;
     justify-content: center;
@@ -44,4 +87,3 @@
     gap: 0.5rem;
     margin-bottom: 4rem;
 }
-
