--- a/to-do-list/src/components/Task.module.css
+++ b/to-do-list/src/components/Task.module.css
@@ -2,7 +2,7 @@
     background: var(--gray500);
     border: 0.5px solid var(--gray400);
     border-radius: 8px;
-    min-height: 4.5rem;
+ 
     display: flex;
     justify-content: space-between;
     padding: 1rem;
@@ -22,6 +22,9 @@
     border-radius: 999px;
     border: 2px solid var(--blue);
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .caixaDeMarcar:hover{
@@ -29,6 +32,10 @@
     background-color: rgba(30, 111, 159, 0.2);
     
 }
+.caixaDeMarcar img {
+    display: none;
+}
+
 
 .caixaDeMarcarOn {
     background: var(--purpleDark);
@@ -36,9 +43,13 @@
     height: 1.5rem;
     border-radius: 999px;
     border: 2px solid var(--purpleDark);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
 
-.caixaDeMarcarOn {
+.caixaDeMarcarOn:hover{
     background: var(--purple);
     border: 2px solid var(--purple);
     
